# financial-reports-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  config.py  engine.py  generation.py  logging.py  main.py  models.py  pipeline.py  retrieval.py  safety.py
data/: company_metadata.json
evals/: dataset.py  eval_set.json  judge.py  metrics.py  run.py
frontend/: index.html
ingest/: chunk.py  embed.py  embed_and_index.py  models.py  parse.py
tests/: conftest.py  test_agent.py  test_engine.py  test_generator.py  test_ingestion.py  test_judge.py  test_pipeline.py  test_retriever.py
